[MODORDERS-1214]. Replace mod-configuration usage to use Settings API from orders-storage (#1162)
* [MODORDERS-1214]. Replace mod-configuration usage to use Settings API from orders-storage

* [MODORDERS-1214]. Fix data import tests

* [MODORDERS-1214]. Clean TestConfig

* [MODORDERS-1214]. Remove @Getter on a private static field, fix sonar

* [MODORDERS-1214]. Rename & refactor variables and methods, update acq-models

* [MODORDERS-1214]. Restore the original acq-models, remove casting

* [MODORDERS-1214]. Apply minor changes to test classes

* [MODORDERS-1214]. Remove duplicate resource path